2000-06-08	Eric Valette <valette@crf.canon.fr>

	* console/console.c, include/commproc.h, startup/start.S:
	The printk/printf did not work when loaded by EPPCBUG. They did
	work when loaded with the BDM debugger.  I suspected EPPBUG 
	made some nasty things like patching Communication processor
	microcode...  Anyway, the attached patch:
          1) Enables to have printk nearly immediately after boot,
          2) Make printf work automagically (I do not know why except I make a 
	different initialization for printk that should be overwritten by 
	console init later ?)

	I let the default to be using EPPCBUG embedded firmware to boot and 
	using this printk early enabler code (LOADED_BY_EPPCBUG and 
	EARLY_CONSOLE) are on.

2001-05-10	Ralf Corsepius	<corsepiu@faw.uni-ulm.de>

	* configure.in: Use RTEMS_PROG_CC_FOR_TARGET([-ansi -fasm]).

2001-04-20	Eric Valette <valette@crf.canon.fr>

 	* include/bsp.h: Added include of <bsp/vectors.h>
	* vectors/vectors.h: Corrected typos.

2001-04-11	Eric Valette <valette@crf.canon.fr>

	* network/network.c: Fix unnecessary double assignment.

2001-03-30	Eric Valette <valette@crf.canon.fr>

	* clock/.cvsignore, clock/Makefile.am, clock/p_clock.c,
	include/8xx_immap.h, include/commproc.h, include/mbx.h,
	irq/.cvsignore, irq/Makefile.am, irq/irq.c, irq/irq.h,
	irq/irq_asm.S, irq/irq_init.c, vectors/.cvsignore,
	vectors/Makefile.am, vectors/vectors.S, vectors/vectors.h,
	vectors/vectors_init.c: New files.
	* Makefile.am, configure.in, console/console.c,
	include/Makefile.am, network/network.c, startup/Makefile.am,
	startup/bspstart.c, startup/imbx8xx.c, startup/linkcmds,
	startup/mmutlbtab.c, startup/start.S, wrapup/Makefile.am:
	The modifications to this BSP reflect the conversion of the
	mpc8xx CPU to the "new exception processing model."

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
