@@ -22,7 +22,9 @@ RTEMS_CHECK_BSP_CACHE(RTEMS_BSP)
 RTEMS_CHECK_NETWORKING
 RTEMS_CANONICAL_HOST
 
+
 RTEMS_PROJECT_ROOT
+AM_CONFIG_HEADER(include/bspopts.h)
 AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")
 
 # Explicitly list a Makefile here 
