@@ -4,9 +4,10 @@
 
 AUTOMAKE_OPTIONS = foreign 1.4
 
-H_FILES = bsp.h coverhd.h
+include_bspdir = $(includedir)/bsp
 
-BSP_H_FILES = mbx.h commproc.h 8xx_immap.h
+include_HEADERS = bsp.h coverhd.h bspopts.h
+include_bsp_HEADERS = mbx.h commproc.h 8xx_immap.h
 
 $(PROJECT_INCLUDE):
 	$(mkinstalldirs) $@
@@ -14,25 +15,15 @@ $(PROJECT_INCLUDE):
 $(PROJECT_INCLUDE)/bsp: 
 	$(mkinstalldirs) $@
 
-$(PROJECT_INCLUDE)/bsp.h: bsp.h
+$(PROJECT_INCLUDE)/%.h: %.h
 	$(INSTALL_DATA) $< $@
 
-$(PROJECT_INCLUDE)/coverhd.h: coverhd.h
-	$(INSTALL_DATA) $< $@
-
-$(PROJECT_INCLUDE)/bsp/mbx.h : mbx.h
-	$(INSTALL_DATA) $< $@
-
-$(PROJECT_INCLUDE)/bsp/commproc.h : commproc.h
-	$(INSTALL_DATA) $< $@
-
-$(PROJECT_INCLUDE)/bsp/8xx_immap.h : 8xx_immap.h
+$(PROJECT_INCLUDE)/bsp/%.h : %.h
 	$(INSTALL_DATA) $< $@
 
 PREINSTALL_FILES += $(PROJECT_INCLUDE) $(PROJECT_INCLUDE)/bsp \
-	$(PROJECT_INCLUDE)/bsp.h \
-	$(PROJECT_INCLUDE)/coverhd.h $(PROJECT_INCLUDE)/bsp/mbx.h \
-	$(PROJECT_INCLUDE)/bsp/commproc.h $(PROJECT_INCLUDE)/bsp/8xx_immap.h
+	$(include_HEADERS:%=$(PROJECT_INCLUDE)/%) \
+	$(include_bsp_HEADERS:%=$(PROJECT_INCLUDE)/bsp/%)
 
 all-local: $(PREINSTALL_FILES)
 
