@@ -7,7 +7,8 @@ AUTOMAKE_OPTIONS = foreign 1.4
 C_FILES = irq.c irq_init.c
 C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
 
-H_FILES = irq.h
+include_bspdir = $(includedir)/bsp
+include_bsp_HEADERS = irq.h
 
 S_FILES = irq_asm.S
 S_O_FILES = $(S_FILES:%.S=$(ARCH)/%.o)
@@ -18,8 +19,12 @@ include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../../../../automake/compile.am
 include $(top_srcdir)/../../../../../../automake/lib.am
 
+#HACK: WTF is this?
 SORDID_HACK:
 	rm -f $(PROJECT_INCLUDE)/bsp/irq.h
+
+$(PROJECT_INCLUDE):
+	$(mkinstalldirs) $@
 
 $(PROJECT_INCLUDE)/bsp:
 	$(mkinstalldirs) $@
@@ -28,7 +33,7 @@ $(PROJECT_INCLUDE)/bsp/%.h: %.h
 	$(INSTALL_DATA) $< $@
 
 PREINSTALL_FILES += $(PROJECT_INCLUDE)/bsp \
-    $(H_FILES:%.h=$(PROJECT_INCLUDE)/bsp/%.h)
+    $(include_bsp_HEADERS:%=$(PROJECT_INCLUDE)/bsp/%)
 
 #
 # (OPTIONAL) Add local stuff here using +=
@@ -41,6 +46,6 @@ $(PGM): $(OBJS)
 
 all-local: SORDID_HACK $(PREINSTALL_FILES) $(ARCH) $(OBJS) $(PGM)
 
-EXTRA_DIST = irq.c irq.h irq_asm.S irq_init.c
+EXTRA_DIST = irq.c irq_asm.S irq_init.c
 
 include $(top_srcdir)/../../../../../../automake/local.am
