@@ -9,7 +9,8 @@ VPATH = @srcdir@:
 C_FILES = vectors_init.c
 C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
 
-H_FILES = vectors.h
+include_bspdir = $(includedir)/bsp
+include_bsp_HEADERS = vectors.h
 
 S_FILES = vectors.S
 S_O_FILES = $(S_FILES:%.S=$(ARCH)/%.o)
@@ -27,13 +28,15 @@ include $(top_srcdir)/../../../../../../automake/lib.am
 $(PGM): $(OBJS)
 	$(make-rel)
 
+$(PROJECT_INCLUDE):
+	$(mkinstalldirs) $@
 $(PROJECT_INCLUDE)/bsp:
 	$(mkinstalldirs) $@
-
-$(PROJECT_INCLUDE)/bsp/vectors.h: vectors.h
+$(PROJECT_INCLUDE)/bsp/%.h: %.h
 	$(INSTALL_DATA) $< $@
 
-PREINSTALL_FILES += $(PROJECT_INCLUDE)/bsp $(PROJECT_INCLUDE)/bsp/vectors.h
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/bsp \
+    $(include_bsp_HEADERS:%=$(PROJECT_INCLUDE)/bsp/%)
 
 all-local: $(ARCH) $(PREINSTALL_FILES) $(OBJS)
 
