@@ -19,6 +19,13 @@ RTEMS_CHECK_CUSTOM_BSP(RTEMS_BSP)
 RTEMS_CHECK_BSP_CACHE(RTEMS_BSP)
 RTEMS_CANONICAL_HOST
 
+## bsp-specific options
+CONSOLE_USE_INTERRUPTS=${CONSOLE_USE_INTERRUPTS-0}
+AC_DEFINE_UNQUOTED([CONSOLE_USE_INTERRUPTS],
+  [$CONSOLE_USE_INTERRUPTS],
+  [whether using console interrupts])
+
+AM_CONFIG_HEADER(include/bspopts.h)
 RTEMS_PROJECT_ROOT
 
 # Explicitly list all Makefiles here
