@@ -4,30 +4,17 @@
 
 AUTOMAKE_OPTIONS = foreign 1.4
 
-H_FILES = bsp.h coverhd.h gen1.h gen2.h tod.h
+include_HEADERS = bsp.h coverhd.h gen1.h gen2.h tod.h bspopts.h
 
-$(PROJECT_INCLUDE)/bsp.h: bsp.h
+$(PROJECT_INCLUDE):
+	$(mkinstalldirs) $@
+
+$(PROJECT_INCLUDE)/%.h: %.h
 	$(INSTALL_DATA) $< $@
 
-$(PROJECT_INCLUDE)/coverhd.h: coverhd.h
-	$(INSTALL_DATA) $< $@
-
-$(PROJECT_INCLUDE)/gen1.h: gen1.h
-	$(INSTALL_DATA) $< $@
-
-$(PROJECT_INCLUDE)/gen2.h: gen2.h
-	$(INSTALL_DATA) $< $@
-
-$(PROJECT_INCLUDE)/tod.h: tod.h
-	$(INSTALL_DATA) $< $@
-
-TMPINSTALL_FILES += $(PROJECT_INCLUDE) $(PROJECT_INCLUDE)/bsp.h \
-    $(PROJECT_INCLUDE)/coverhd.h \
-    $(PROJECT_INCLUDE)/gen1.h $(PROJECT_INCLUDE)/gen2.h \
-    $(PROJECT_INCLUDE)/tod.h
+TMPINSTALL_FILES += $(PROJECT_INCLUDE) \
+    $(include_HEADERS:%=$(PROJECT_INCLUDE)/%)
 
 all-local: $(TMPINSTALL_FILES)
-
-EXTRA_DIST = bsp.h chain.h coverhd.h gen1.h gen2.h tod.h
 
 include $(top_srcdir)/../../../../../../automake/local.am
