@@ -20,6 +20,8 @@
 extern "C" {
 #endif
 
+#include <bspopts.h>
+
 /*
  *  confdefs.h overrides for this BSP:
  *   - termios serial ports (defaults to 1)
