@@ -1,3 +1,10 @@
+2001-06-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* configure.in: Add bspopts.h.
+	* include/.cvsignore: Add bspopts.h*, stamp-h*.
+	* include/Makefile.am: Use *_HEADERS instead of *H_FILES.
+	* include/bsp.h: Include bspopts.h.
+
 2000-06-08	Eric Valette <valette@crf.canon.fr>
 
 	* console/console.c, include/commproc.h, startup/start.S:
